<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:id="@+id/linlayout"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background = "@drawable/tilesheet" >
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:orientation="horizontal" >
        <Spinner
            android:id="@+id/choose_key"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="30sp" />
        <Spinner
            android:id="@+id/choose_major"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="30sp" />
        <Button
            android:id="@+id/gen_button"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/gen"
            android:textSize="30sp"
            android:layout_marginTop="6dp"
             />
        <Button
            android:id="@+id/play_button"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/play"
            android:textSize="30sp"
            android:layout_marginTop="6dp" />
       <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loop"
            android:gravity="center_vertical"
            android:textSize="19sp"
            android:id="@+id/loop_box" />
           
            
	</LinearLayout>
	
    <LinearLayout
		android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
       
        <SeekBar
            android:id = "@+id/tempoBar"
            android:layout_width = "fill_parent"
            android:layout_height = "wrap_content"
            android:layout_weight = "3" />
        <TextView
            android:id="@+id/tempoView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:layout_gravity = "center"
            android:text = "Tempo: 120"
            android:layout_weight = "1"
            android:padding = "10dip" />
       
        
    </LinearLayout>

	    <LinearLayout
		android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
	         <TextView
	            android:id="@+id/textview"
	            android:layout_width = "wrap_content"
	            android:layout_height = "wrap_content"
	            android:textSize="25dp"
	            />
		    <CheckBox
		    android:id="@+id/piano_box"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="bottom"
		    android:textSize="19sp"
		    android:text="@string/piano" />
	
		<CheckBox
		    android:id="@+id/guitar_box"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="bottom"
		    android:paddingRight="15dp"
		      android:textSize="19sp"
		    android:text="@string/guitar" />
		 <Button
	            android:id="@+id/settings_button"
	            android:layout_height="wrap_content"
	            android:layout_width="wrap_content"
	            android:text="@string/settings"
	            android:textSize="25sp"
	            android:layout_marginTop="3dp"
	             />
	

	</LinearLayout>
			
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:paddingBottom="0dp"
	    android:layout_weight="1" >
	    <TextView
	        android:id="@+id/randchord1"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:textSize="35dp"
	        android:clickable="true"
	        android:gravity="center_vertical|center_horizontal"
	        android:paddingTop="15dp"/>
	    <TextView
	        android:id="@+id/randchord2"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:clickable="true"
	        android:longClickable="true"
	        android:layout_weight="1"
	        android:textSize="35sp"
	        android:gravity="center_vertical|center_horizontal" 
	        android:paddingTop="15dp" />
	    <TextView
	        android:id="@+id/randchord3"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:clickable="true"
	        android:longClickable="true"
	        android:layout_weight="1"
	        android:textSize="35sp"
	        android:gravity="center_vertical|center_horizontal"  
	        android:paddingTop="15dp"/>
	    <TextView
	        android:id="@+id/randchord4"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:clickable="true"
	        android:longClickable="true"
	        android:layout_weight="1"
	        android:textSize="35dp"
	        android:gravity="center_vertical|center_horizontal" 
	        android:paddingTop="15dp" />
	  
	</LinearLayout>
	
	

</LinearLayout>

        
